--- a/04-gif-expert-app/package.json
+++ b/04-gif-expert-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "enzyme": "^3.11.0",
     "http-server": "^0.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -35,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "enzyme-to-json": "^3.6.1"
   }
 }
