--- a/04-gif-expert-app/package.json
+++ b/04-gif-expert-app/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^4.0.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "enzyme-to-json": "^3.6.1"
   }
